fix: overflow product card image on hover

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -334,6 +334,7 @@
   background: #fff;
   box-shadow: 0px 0px 36.42312px 0px rgba(0, 0, 0, 0.1);
   margin-bottom: 30px;
+  overflow: hidden;
 }
 
 .card__header {
